# web_render

./: .env  Cargo.toml  Dockerfile  asdsa.txt  configuration.yaml
.cargo/: config.toml
configuration/: base.yml  local.yaml  production.yaml
migrations/: 20260526023018_create_subscriptions_table.sql
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/route/: subscriptions.rs
tests/: health_check.rs
