[package]
name = "myzero2prod"
version = "0.1.0"
edition = "2024"


[dependencies]
actix-web = "4.13.0"
tokio = { version = "1.52.3", features = ["macros","rt-multi-thread"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0", features = ["tls-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "runtime-tokio"] }
config = "0.15.23"
uuid = { version = "1.23.1", features = ["v4"] }
env_logger = "0.11.10"
log = "0.4.30"
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3.23", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
secrecy = { version = "0.10.3", features = ["serde"] }
tracing-actix-web = "0.7.21"
dotenvy = "0.15.7"

[dev-dependencies]
reqwest = "0.13.3"
